# conan-py-build

./: .gitignore  README.md  RPATH_SUBDIRS.md  pyproject.toml
.github/workflows/: ci.yml  cibw-example.yml
examples/basic/: conanfile.py
examples/basic-nanobind/: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
examples/basic-nanobind/src/: myadder.cpp
examples/basic-nanobind/src/myadder_nanobind/: __init__.py
examples/basic-pybind11/: conanfile.py  pyproject.toml
examples/basic-scm/: README.md  pyproject.toml
examples/basic-scm/src/myadder_scm/: __init__.py
examples/cibw-example/: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
examples/cibw-example/profiles/: macos-arm64  macos-x86_64.jinja  windows-x86_64
examples/cibw-example/src/: myadder.cpp
examples/cibw-example/src/myadder_pybind11/: __init__.py
recipes/cpython/: conandata.yml
src/conan_py_build/: __init__.py  build.py  wheel_deploy.py
tests/: test_integration.py  test_unit.py
