[build-system]
requires = ["conan-py-build"]
build-backend = "conan_py_build.build"

[project]
name = "myadder-pybind11"
dynamic = ["version"]
description = "A simple Python package with C++ code (pybind11) that adds two numbers"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"

[tool.conan-py-build]
version = "version-file"
version-file = "python/myadder_pybind11/__init__.py"

[tool.conan-py-build.wheel]
packages = ["python/myadder_pybind11", "src/extra_utils"]

[tool.conan-py-build.sdist]
# Drop README from the sdist
exclude = ["README.md"]
